--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,11 @@ pool:
 variables:
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
+  - group: setA
 
 steps:
+- script: echo $(Server)
+
 - task: NuGetToolInstaller@1
   name: 'NuGetToolInstaller'
   displayName: 'NuGet Install'
