--- a/azure-pipelines-v2.yml
+++ b/azure-pipelines-v2.yml
@@ -15,7 +15,7 @@ parameters:
 
 variables:
   - name: environmentName
-    value: ${{ if eq(variables['Build.SourceBranchName'], 'develop') }} 'develop'
+    value: 'develop'
             
   - name: buildPlatform
     value: 'Any CPU'
